Replace deprecated constructor